fix z-index for date-picker

--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,7 @@ label {
 }
 .date-picker {
   position: absolute;
+  z-index: 10;
 }
 
 .form-switch .form-check-input {
